# Create wait step and increase base model.

--- a/src/AutoClicker/AutoClicker.csproj
+++ b/src/AutoClicker/AutoClicker.csproj
@@ -112,6 +112,7 @@
     <Compile Include="Model\Abstraction\Interface\ITestResult.cs" />
     <Compile Include="Model\ExecutableSteps\ClickStep.cs" />
     <Compile Include="Model\ExecutableSteps\RootStep.cs" />
+    <Compile Include="Model\ExecutableSteps\WaitStep.cs" />
     <Compile Include="Model\IImageSource.cs" />
     <Compile Include="Model\Inputs\ImageSearch.cs" />
     <Compile Include="Model\Inputs\InputSimulator.cs" />
