--- a/src/AutoClicker.Tests/AutoClicker.Tests.csproj
+++ b/src/AutoClicker.Tests/AutoClicker.Tests.csproj
@@ -69,8 +69,9 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="WaitStepTest.cs" />
-    <Compile Include="RootStepTest.cs" />
+    <Compile Include="TestResultTests.cs" />
+    <Compile Include="WaitStepTests.cs" />
+    <Compile Include="RootStepTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
