--- a/src/AutoClicker/AutoClicker.csproj
+++ b/src/AutoClicker/AutoClicker.csproj
@@ -110,6 +110,7 @@
     <Compile Include="Model\Abstraction\Interface\IImageSource.cs" />
     <Compile Include="Model\Abstraction\Interface\Inputs\IInputSimulator.cs" />
     <Compile Include="Model\Abstraction\Interface\ITestResult.cs" />
+    <Compile Include="Model\ExecutableSteps\SearchPictureStep.cs" />
     <Compile Include="Model\ExecutableSteps\ClickStep.cs" />
     <Compile Include="Model\ExecutableSteps\RootStep.cs" />
     <Compile Include="Model\ExecutableSteps\WaitStep.cs" />
