--- a/src/AutoClicker/AutoClicker.csproj
+++ b/src/AutoClicker/AutoClicker.csproj
@@ -106,10 +106,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Model\Abstraction\Interface\IClickModule.cs" />
     <Compile Include="Model\Abstraction\Interface\IExecutableStep.cs" />
     <Compile Include="Model\Abstraction\Interface\IImageSource.cs" />
     <Compile Include="Model\Abstraction\Interface\Inputs\IInputSimulator.cs" />
-    <Compile Include="Model\Abstraction\Interface\Interface1.cs" />
+    <Compile Include="Model\Abstraction\Interface\ISearchPictureModule.cs" />
     <Compile Include="Model\Abstraction\Interface\ITestResult.cs" />
     <Compile Include="Model\ExecutableSteps\SearchPictureModule.cs" />
     <Compile Include="Model\ExecutableSteps\SearchPictureStep.cs" />
