--- a/src/AutoClicker/AutoClicker.csproj
+++ b/src/AutoClicker/AutoClicker.csproj
@@ -142,14 +142,35 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="View\ScreenShotMakerWindow.xaml.cs">
+    <Compile Include="View\Controls\ScreenShotMakerWindow.xaml.cs">
       <DependentUpon>ScreenShotMakerWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\Steps\ClickStepView.xaml.cs">
+      <DependentUpon>ClickStepView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\Steps\RootStepView.xaml.cs">
+      <DependentUpon>RootStepView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\Steps\SearchPictureStepView.xaml.cs">
+      <DependentUpon>SearchPictureStepView.xaml</DependentUpon>
     </Compile>
     <Page Include="View\MainWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="View\ScreenShotMakerWindow.xaml">
+    <Page Include="View\Controls\ScreenShotMakerWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\Steps\ClickStepView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\Steps\RootStepView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\Steps\SearchPictureStepView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -184,9 +205,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Controls\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
