--- a/src/AutoClicker/packages.config
+++ b/src/AutoClicker/packages.config
@@ -1,13 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <packages>
   <package id="EmguCV" version="3.1.0.1" targetFramework="net452" />
   <package id="InputSimulator" version="1.0.4.0" targetFramework="net452" />
-  <package id="ksemenenko.MVVMBase" version="1.3.0.1" targetFramework="net46" />
+  <package id="ksemenenko.GoogleAnalytics" version="1.0.3" targetFramework="net46" />
+  <package id="ksemenenko.MVVMBase" version="1.3.1" targetFramework="net46" />
   <package id="MaterialDesignColors" version="1.1.3" targetFramework="net452" />
   <package id="MaterialDesignThemes" version="2.3.0.823" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="10.0.1" targetFramework="net452" />
-  <package id="OpenTK" version="1.1.2225.0" targetFramework="net452" />
-  <package id="OpenTK.GLControl" version="1.1.2225.0" targetFramework="net452" />
-  <package id="ZedGraph" version="5.1.5" targetFramework="net452" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net46" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net46" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net46" />
+  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net46" />
+  <package id="OpenTK" version="2.0.0" targetFramework="net46" />
+  <package id="OpenTK.GLControl" version="1.1.2349.61993" targetFramework="net46" />
+  <package id="ZedGraph" version="5.1.7" targetFramework="net46" />
 </packages>
